; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_wifi.c_wifi_getcountry.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_wifi.c_wifi_getcountry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i64, i64, i64, i32 }

@.str = private unnamed_addr constant [8 x i8] c"country\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"start_ch\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"end_ch\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"policy\00", align 1
@.str.4 = private unnamed_addr constant [27 x i8] c"Unable to get country info\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @wifi_getcountry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wifi_getcountry(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %3, align 8
  %5 = bitcast %struct.TYPE_3__* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %5, i8 0, i64 40, i1 false)
  %6 = call i64 @wifi_get_country(%struct.TYPE_3__* %4)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %47

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @lua_newtable(i32* %9)
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @lua_pushstring(i32* %11, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %13 = load i32*, i32** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  %16 = call i32 @lua_pushstring(i32* %13, i8* %15)
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @lua_rawset(i32* %17, i32 -3)
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @lua_pushstring(i32* %19, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %21 = load i32*, i32** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 3
  %23 = load i64, i64* %22, align 8
  %24 = call i32 @lua_pushnumber(i32* %21, i64 %23)
  %25 = load i32*, i32** %3, align 8
  %26 = call i32 @lua_rawset(i32* %25, i32 -3)
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @lua_pushstring(i32* %27, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %29 = load i32*, i32** %3, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 3
  %31 = load i64, i64* %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 2
  %33 = load i64, i64* %32, align 8
  %34 = add nsw i64 %31, %33
  %35 = sub nsw i64 %34, 1
  %36 = call i32 @lua_pushnumber(i32* %29, i64 %35)
  %37 = load i32*, i32** %3, align 8
  %38 = call i32 @lua_rawset(i32* %37, i32 -3)
  %39 = load i32*, i32** %3, align 8
  %40 = call i32 @lua_pushstring(i32* %39, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %41 = load i32*, i32** %3, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %43 = load i64, i64* %42, align 8
  %44 = call i32 @lua_pushnumber(i32* %41, i64 %43)
  %45 = load i32*, i32** %3, align 8
  %46 = call i32 @lua_rawset(i32* %45, i32 -3)
  store i32 1, i32* %2, align 4
  br label %50

47:                                               ; preds = %1
  %48 = load i32*, i32** %3, align 8
  %49 = call i32 @luaL_error(i32* %48, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.4, i64 0, i64 0))
  store i32 %49, i32* %2, align 4
  br label %50

50:                                               ; preds = %47, %8
  %51 = load i32, i32* %2, align 4
  ret i32 %51
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i64 @wifi_get_country(%struct.TYPE_3__*) #2

declare dso_local i32 @lua_newtable(i32*) #2

declare dso_local i32 @lua_pushstring(i32*, i8*) #2

declare dso_local i32 @lua_rawset(i32*, i32) #2

declare dso_local i32 @lua_pushnumber(i32*, i64) #2

declare dso_local i32 @luaL_error(i32*, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
